--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <li style="float: left;list-style-type:none;"><h3 style="color:#0466c8;line-height: 12px;margin-left:10px; margin-top:15px">SPARKS BANKING</h3></li>
                 <li style="float:left;list-style-type:none;"><img src="piggy-bank.png" class="logo"></li>
                 <ul style="list-style-type:none;">
-                <li><a href="history.php" >TRANSACTION</a></li>
+                <li><a href="history.php" >TRANSACTION HISTORY</a></li>
                 <li><a href="customer.php">CUSTOMERS</a></li>
                 <li><a href="#" class="active">HOME</a></li>
                 </ul>
